# check-unprotected-keys

./: .check-unprotected-keys.toml  .check-unprotected-keys.toml.example  .find-unencrypted-keys.toml  .find-unencrypted-keys.toml.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  check-unprotected-keys.spec  find-unencrypted-keys.spec  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
scripts/: smoke_test_executable.sh
specs/001-check-unprotected-keys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-check-unprotected-keys/checklists/: requirements.md
specs/001-check-unprotected-keys/contracts/: cli-contract.md  config-contract.md
specs/002-expand-secret-patterns/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-expand-secret-patterns/checklists/: requirements.md
specs/002-expand-secret-patterns/contracts/: cli-contract.md  config-contract.md
specs/003-remediation-guidance-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-remediation-guidance-logging/checklists/: requirements.md
specs/003-remediation-guidance-logging/contracts/: cli-contract.md
specs/004-start-folder-parameter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-start-folder-parameter/checklists/: requirements.md
specs/004-start-folder-parameter/contracts/: start-folder-validation.md
specs/005-search-bases-and-directory-hints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-search-bases-and-directory-hints/checklists/: requirements.md
specs/005-search-bases-and-directory-hints/contracts/: search-bases-semantics.md
specs/006-symlink-safe-traversal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-symlink-safe-traversal/checklists/: requirements.md
specs/006-symlink-safe-traversal/contracts/: cli-contract.md
specs/007-move-ignore-to-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-move-ignore-to-config/checklists/: requirements.md
specs/007-move-ignore-to-config/contracts/: ignore-patterns-semantics.md
specs/008-java-properties-scan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-java-properties-scan/checklists/: requirements.md
specs/008-java-properties-scan/contracts/: properties-inspection.md
specs/009-properties-detection-accuracy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-properties-detection-accuracy/checklists/: requirements.md
specs/009-properties-detection-accuracy/contracts/: properties-detection.md
src/check_unprotected_keys/: __init__.py  __main__.py  cli.py
src/check_unprotected_keys/adapters/: __init__.py  filesystem.py  key_parsers.py  properties_inspector.py  reporting.py
src/check_unprotected_keys/config/: loader.py  models.py
src/check_unprotected_keys/domain/: __init__.py  classification.py  models.py  properties.py  scope.py
src/check_unprotected_keys/resources/: __init__.py  check-unprotected-keys.example.toml
src/check_unprotected_keys/services/: __init__.py  scan_service.py
src/find_unencrypted_keys/: __init__.py  cli.py
src/find_unencrypted_keys/adapters/: reporting.py
src/find_unencrypted_keys/config/: loader.py
src/find_unencrypted_keys/domain/: models.py  scope.py
src/find_unencrypted_keys/services/: scan_service.py
tests/: __init__.py
tests/contract/: test_cli_default_scan_contract.py  test_cli_start_folder_contract.py  test_config_contract.py
tests/fixtures/default-scope/team-a/: id_rsa  id_rsa.pub  service_private.pem
tests/fixtures/default-scope/team-b/: workstation.ppk
tests/fixtures/expanded-patterns/: README.md
tests/fixtures/properties_corpus/: __init__.py  corpus.py
tests/fixtures/protected-only/: broken_private.key  id_ed25519  service_private.pem
tests/integration/: test_default_scan_workflow.py  test_ignore_patterns.py  test_properties_scan_workflow.py  test_start_folder_scan.py  test_symlink_traversal.py
tests/support/: __init__.py  fixture_builders.py
tests/unit/: test_config_loader.py  test_filesystem_ignore_patterns.py  test_foundation_helpers.py  test_key_classification.py  test_malformed_path_logging.py  test_message_bundles.py  test_properties_accuracy.py  test_properties_inspector.py  test_properties_parsing.py  test_property_kinds.py  test_property_placeholders.py  test_property_secrets.py  test_remediation_guidance.py  test_reporting.py  test_scope_resolution.py  test_tiered_gate.py  test_value_shapes.py  test_value_signatures.py  test_visited_directory_tracker.py
