[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check-unprotected-keys"
description = "Standalone CLI scanner for unprotected private keys"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "cryptography>=46.0.7,<47.0",
]

[project.urls]
Repository = "https://github.com/jahnog/find-unencrypted-keys"
Issues = "https://github.com/jahnog/find-unencrypted-keys/issues"

[project.optional-dependencies]
dev = [
    "bcrypt>=4.1,<5.0",
    "build>=1.2,<2.0",
    "pyinstaller>=6.15,<7.0",
    "pyright>=1.1.400,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=6.2,<7.0",
    "ruff>=0.12,<0.13",
]

[project.scripts]
check-unprotected-keys = "find_unencrypted_keys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "find_unencrypted_keys.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/find_unencrypted_keys --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["find_unencrypted_keys"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
