[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check-unprotected-keys"
description = "Standalone CLI scanner for unprotected private keys"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "jahnog"},
]
keywords = [
    "cli",
    "private-key",
    "pyinstaller",
    "security",
    "ssh",
    "standalone",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dynamic = ["version"]
dependencies = [
    "cryptography>=48.0.1,<49.0",
]

[project.urls]
Homepage = "https://github.com/jahnog/check-unprotected-keys"
Documentation = "https://github.com/jahnog/check-unprotected-keys/blob/main/README.md"
Changelog = "https://github.com/jahnog/check-unprotected-keys/blob/main/CHANGELOG.md"
Repository = "https://github.com/jahnog/check-unprotected-keys"
Issues = "https://github.com/jahnog/check-unprotected-keys/issues"

[project.optional-dependencies]
dev = [
    "bcrypt>=4.1,<5.0",
    "build>=1.2,<2.0",
    "pyinstaller>=6.15,<7.0",
    "pyright>=1.1.400,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=6.2,<7.0",
    "ruff>=0.12,<0.13",
]

[project.scripts]
check-unprotected-keys = "check_unprotected_keys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"check_unprotected_keys.resources" = ["*.toml"]

[tool.setuptools.dynamic]
version = {attr = "check_unprotected_keys.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/check_unprotected_keys --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["check_unprotected_keys"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
